--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
           php-version: '8.0'
 
       - name: Setup project
-        run: make setup
+        run: make setup not full
 
       - name: Run linter
         run: make lint
