--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,10 @@ jobs:
           php-version: '8.0'
 
       - name: Setup project
-        run: make setup not full
+        run: make setup-not-full
 
-      - name: Run linter
-        run: make lint
+#      - name: Run linter
+#        run: make lint
 
       - name: Run tests
         run: make test
