--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "resolve-url-loader": "^3.1.2",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "@rails/ujs": "^6.1.4"
     }
 }
