--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,11 +22,11 @@ jobs:
         with:
           php-version: '8.0'
 
+      - name: Generate database file
+        run: touch database/database.sqlite
+
       - name: Setup project
         run: make setup
-
-#      - name: Run linter
-#        run: make lint
 
       - name: Run tests
         run: make test
